{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 499,
  "lineage": "150476d9-c290-30a4-3d45-5d720f045d55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:security-group/sg-01cde53f8fb514885",
            "description": "Allow inbound traffic to redis from jenkins slaves",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.2.0.0/20",
                  "10.2.128.0/23",
                  "10.2.128.0/26",
                  "10.2.128.128/26",
                  "10.2.128.192/26",
                  "10.2.128.64/26",
                  "10.2.129.192/26",
                  "10.2.132.0/26",
                  "10.2.132.0/28",
                  "10.2.149.0/24",
                  "10.2.152.0/24",
                  "10.2.153.0/24",
                  "10.2.160.128/25",
                  "10.2.162.0/25",
                  "10.2.163.0/24",
                  "10.2.176.0/23",
                  "10.2.198.0/24",
                  "10.2.199.0/25",
                  "10.2.199.128/25",
                  "100.100.0.0/16",
                  "100.100.24.0/23",
                  "100.100.26.0/23",
                  "100.100.28.0/23",
                  "100.100.30.0/24",
                  "172.20.0.0/16",
                  "198.0.0.0/16"
                ],
                "description": "Allow outbound traffic from redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043130a2acb04f3fc",
                  "sg-0646d1fb38e1a259f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-01cde53f8fb514885",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.2.0.0/20",
                  "10.2.128.0/23",
                  "10.2.128.0/26",
                  "10.2.128.128/26",
                  "10.2.128.192/26",
                  "10.2.128.64/26",
                  "10.2.129.192/26",
                  "10.2.132.0/26",
                  "10.2.132.0/28",
                  "10.2.149.0/24",
                  "10.2.152.0/24",
                  "10.2.153.0/24",
                  "10.2.160.128/25",
                  "10.2.162.0/25",
                  "10.2.163.0/24",
                  "10.2.176.0/23",
                  "10.2.198.0/24",
                  "10.2.199.0/25",
                  "10.2.199.128/25",
                  "100.100.0.0/16",
                  "100.100.24.0/23",
                  "100.100.26.0/23",
                  "100.100.28.0/23",
                  "100.100.30.0/24",
                  "172.20.0.0/16",
                  "198.0.0.0/16"
                ],
                "description": "Allowing inbound traffic to redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043130a2acb04f3fc",
                  "sg-0646d1fb38e1a259f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "us-dev1-orders-redis",
            "name_prefix": "",
            "owner_id": "607546651489",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "K8DM",
              "ApplicationID": "APP0012189",
              "Budget Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Budget_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Capability": "ORDERS",
              "Capability Abbreviation": "ORDR",
              "Capability Distribution List": "payc-ordc-prod.nar@capgemini.com",
              "Capability_Abbreviation": "ORDR",
              "Capability_Distribution_List": "payc-ordc-prod.nar@capgemini.com",
              "Cluster": "DEV",
              "DataClassification": "Restricted",
              "Deployed_At": "2022-03-25T18:35:06Z",
              "Env_desc": "AMAZON ELASTICACHE ORDERS",
              "Environment": "US-EAST-DEV-US-ORDR-DEV1-ORDERS",
              "Environment_Type": "DEV",
              "Environment_Version": "DEV01",
              "GBL": "195500855387",
              "IDEA_Tag_Revision_File": "AWS Tagging Improvements v7.pdf",
              "IDEA_Ticket": "IDEA-1239",
              "IT Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "IT_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "ManagedBy": "Terraform",
              "Market": "US",
              "Name": "US-EAST-DEV-US-ORDR-DEV1-ORDERS-ELASTICACHE",
              "Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Patch Group": "EXCLUDED",
              "Patch_Group": "EXCLUDED",
              "Purpose": "GENERALDIGITAL",
              "Release_Version": "2.1.39.27-a5cec8",
              "Team": "ORDERS",
              "Workload": "DEV",
              "cpm backup": "mcds_us_none_4_non_prod_607546651489",
              "cpm_backup": "mcds_us_none_4_non_prod_607546651489",
              "vpc_id": "vpc-0c1d18e7f896a1fff"
            },
            "tags_all": {
              "Application": "K8DM",
              "ApplicationID": "APP0012189",
              "Budget Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Budget_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Capability": "ORDERS",
              "Capability Abbreviation": "ORDR",
              "Capability Distribution List": "payc-ordc-prod.nar@capgemini.com",
              "Capability_Abbreviation": "ORDR",
              "Capability_Distribution_List": "payc-ordc-prod.nar@capgemini.com",
              "Cluster": "DEV",
              "DataClassification": "Restricted",
              "Deployed_At": "2022-03-25T18:35:06Z",
              "Env_desc": "AMAZON ELASTICACHE ORDERS",
              "Environment": "US-EAST-DEV-US-ORDR-DEV1-ORDERS",
              "Environment_Type": "DEV",
              "Environment_Version": "DEV01",
              "GBL": "195500855387",
              "IDEA_Tag_Revision_File": "AWS Tagging Improvements v7.pdf",
              "IDEA_Ticket": "IDEA-1239",
              "IT Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "IT_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "ManagedBy": "Terraform",
              "Market": "US",
              "Name": "US-EAST-DEV-US-ORDR-DEV1-ORDERS-ELASTICACHE",
              "Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Patch Group": "EXCLUDED",
              "Patch_Group": "EXCLUDED",
              "Purpose": "GENERALDIGITAL",
              "Release_Version": "2.1.39.27-a5cec8",
              "Team": "ORDERS",
              "Workload": "DEV",
              "cpm backup": "mcds_us_none_4_non_prod_607546651489",
              "cpm_backup": "mcds_us_none_4_non_prod_607546651489",
              "vpc_id": "vpc-0c1d18e7f896a1fff"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_elasticache_subnet_group.elasticache",
            "module.vpc_subnet_cidrs_blocks.data.aws_security_group.k8s_masters",
            "module.vpc_subnet_cidrs_blocks.data.aws_security_group.k8s_nodes",
            "module.vpc_subnet_cidrs_blocks.data.aws_subnet.all_private_by_filter",
            "module.vpc_subnet_cidrs_blocks.data.aws_subnet_ids.all_private_by_filter",
            "module.vpc_subnet_cidrs_blocks.data.aws_vpc.vpc_info"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_mw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:security-group/sg-0d9ba54f3eb7a4301",
            "description": "Allow inbound traffic to redis from jenkins slaves",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.2.0.0/20",
                  "10.2.128.0/23",
                  "10.2.128.0/26",
                  "10.2.128.128/26",
                  "10.2.128.192/26",
                  "10.2.128.64/26",
                  "10.2.129.192/26",
                  "10.2.132.0/26",
                  "10.2.132.0/28",
                  "10.2.149.0/24",
                  "10.2.152.0/24",
                  "10.2.153.0/24",
                  "10.2.160.128/25",
                  "10.2.162.0/25",
                  "10.2.163.0/24",
                  "10.2.176.0/23",
                  "10.2.198.0/24",
                  "10.2.199.0/25",
                  "10.2.199.128/25",
                  "100.100.0.0/16",
                  "100.100.24.0/23",
                  "100.100.26.0/23",
                  "100.100.28.0/23",
                  "100.100.30.0/24",
                  "172.20.0.0/16",
                  "198.0.0.0/16"
                ],
                "description": "Allow outbound traffic from redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043130a2acb04f3fc",
                  "sg-0646d1fb38e1a259f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0d9ba54f3eb7a4301",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/20",
                  "10.2.0.0/20",
                  "10.2.128.0/23",
                  "10.2.128.0/26",
                  "10.2.128.128/26",
                  "10.2.128.192/26",
                  "10.2.128.64/26",
                  "10.2.129.192/26",
                  "10.2.132.0/26",
                  "10.2.132.0/28",
                  "10.2.149.0/24",
                  "10.2.152.0/24",
                  "10.2.153.0/24",
                  "10.2.160.128/25",
                  "10.2.162.0/25",
                  "10.2.163.0/24",
                  "10.2.176.0/23",
                  "10.2.198.0/24",
                  "10.2.199.0/25",
                  "10.2.199.128/25",
                  "100.100.0.0/16",
                  "100.100.24.0/23",
                  "100.100.26.0/23",
                  "100.100.28.0/23",
                  "100.100.30.0/24",
                  "172.20.0.0/16",
                  "198.0.0.0/16"
                ],
                "description": "Allowing inbound traffic to dedicated middleware redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043130a2acb04f3fc",
                  "sg-0646d1fb38e1a259f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "mw-orders-dev",
            "name_prefix": "",
            "owner_id": "607546651489",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "K8DM",
              "ApplicationID": "APP0012189",
              "Budget Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Budget_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Capability": "ORDERS",
              "Capability Abbreviation": "ORDR",
              "Capability Distribution List": "payc-ordc-prod.nar@capgemini.com",
              "Capability_Abbreviation": "ORDR",
              "Capability_Distribution_List": "payc-ordc-prod.nar@capgemini.com",
              "Cluster": "DEV",
              "DataClassification": "Restricted",
              "Deployed_At": "2022-03-25T18:35:06Z",
              "Env_desc": "AMAZON ELASTICACHE ORDERS MW",
              "Environment": "US-EAST-DEV-US-ORDR-DEV1-ORDERS",
              "Environment_Type": "DEV",
              "Environment_Version": "DEV01",
              "GBL": "195500855387",
              "IDEA_Tag_Revision_File": "AWS Tagging Improvements v7.pdf",
              "IDEA_Ticket": "IDEA-1239",
              "IT Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "IT_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "ManagedBy": "Terraform",
              "Market": "US",
              "Name": "US-EAST-DEV-US-ORDR-DEV1-ORDERS-ELASTICACHE",
              "Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Patch Group": "EXCLUDED",
              "Patch_Group": "EXCLUDED",
              "Purpose": "GENERALDIGITAL",
              "Release_Version": "2.1.39.27-a5cec8",
              "Team": "ORDERS",
              "Workload": "DEV",
              "cpm backup": "mcds_us_none_4_non_prod_607546651489",
              "cpm_backup": "mcds_us_none_4_non_prod_607546651489",
              "vpc_id": "vpc-0c1d18e7f896a1fff"
            },
            "tags_all": {
              "Application": "K8DM",
              "ApplicationID": "APP0012189",
              "Budget Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Budget_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Capability": "ORDERS",
              "Capability Abbreviation": "ORDR",
              "Capability Distribution List": "payc-ordc-prod.nar@capgemini.com",
              "Capability_Abbreviation": "ORDR",
              "Capability_Distribution_List": "payc-ordc-prod.nar@capgemini.com",
              "Cluster": "DEV",
              "DataClassification": "Restricted",
              "Deployed_At": "2022-03-25T18:35:06Z",
              "Env_desc": "AMAZON ELASTICACHE ORDERS MW",
              "Environment": "US-EAST-DEV-US-ORDR-DEV1-ORDERS",
              "Environment_Type": "DEV",
              "Environment_Version": "DEV01",
              "GBL": "195500855387",
              "IDEA_Tag_Revision_File": "AWS Tagging Improvements v7.pdf",
              "IDEA_Ticket": "IDEA-1239",
              "IT Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "IT_Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "ManagedBy": "Terraform",
              "Market": "US",
              "Name": "US-EAST-DEV-US-ORDR-DEV1-ORDERS-ELASTICACHE",
              "Owner": "mcdonaldsordersawsmanagement.global@capgemini.com",
              "Patch Group": "EXCLUDED",
              "Patch_Group": "EXCLUDED",
              "Purpose": "GENERALDIGITAL",
              "Release_Version": "2.1.39.27-a5cec8",
              "Team": "ORDERS",
              "Workload": "DEV",
              "cpm backup": "mcds_us_none_4_non_prod_607546651489",
              "cpm_backup": "mcds_us_none_4_non_prod_607546651489",
              "vpc_id": "vpc-0c1d18e7f896a1fff"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_elasticache_subnet_group.redis_mw",
            "module.vpc_subnet_cidrs_blocks.data.aws_security_group.k8s_masters",
            "module.vpc_subnet_cidrs_blocks.data.aws_security_group.k8s_nodes",
            "module.vpc_subnet_cidrs_blocks.data.aws_subnet.all_private_by_filter",
            "module.vpc_subnet_cidrs_blocks.data.aws_subnet_ids.all_private_by_filter",
            "module.vpc_subnet_cidrs_blocks.data.aws_vpc.vpc_info"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "k8s_masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:security-group/sg-0646d1fb38e1a259f",
            "description": "Security group for masters",
            "filter": null,
            "id": "sg-0646d1fb38e1a259f",
            "name": "masters.dev.vet-dev.digitalecp.mcd.com",
            "tags": {
              "ApplicationID": "APP0012189",
              "Environment": "US-EAST-DEV-US-FAV-DEV-AMAZONSG",
              "GBL": "195500855387",
              "KubernetesCluster": "dev.vet-dev.digitalecp.mcd.com",
              "Name": "masters.dev.vet-dev.digitalecp.mcd.com",
              "Owner": "global-hosting@us.mcd.com",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "owned"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_security_group",
      "name": "k8s_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:security-group/sg-043130a2acb04f3fc",
            "description": "Security group for nodes",
            "filter": null,
            "id": "sg-043130a2acb04f3fc",
            "name": "nodes.dev.vet-dev.digitalecp.mcd.com",
            "tags": {
              "ApplicationID": "APP0012189",
              "Environment": "US-EAST-DEV-US-FAV-DEV-AMAZONSG",
              "GBL": "195500855387",
              "KubernetesCluster": "dev.vet-dev.digitalecp.mcd.com",
              "Name": "nodes.dev.vet-dev.digitalecp.mcd.com",
              "Owner": "global-hosting@us.mcd.com",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "owned"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00ec3c426f3dc09fe",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-00ec3c426f3dc09fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 20,
            "cidr_block": "10.2.128.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec3c426f3dc09fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/clee.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-danb.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-fsadykov.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-wynn-anna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0174faa80dda897b4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0174faa80dda897b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 82,
            "cidr_block": "100.100.31.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0174faa80dda897b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-2-1a",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-01b478f6e74b8612f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-01b478f6e74b8612f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 273,
            "cidr_block": "100.100.28.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b478f6e74b8612f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cluster-anna1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-02740ed9a86a6450d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-02740ed9a86a6450d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 0,
            "cidr_block": "10.2.128.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02740ed9a86a6450d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-02a62ff2b22d3be22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-02a62ff2b22d3be22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 37,
            "cidr_block": "100.100.31.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a62ff2b22d3be22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-2-1b",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-03887b67393b6aa8d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-03887b67393b6aa8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 249,
            "cidr_block": "198.18.5.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03887b67393b6aa8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-03be8fb837ab2b49f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-03be8fb837ab2b49f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 0,
            "cidr_block": "10.2.128.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03be8fb837ab2b49f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-danb.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-03d87b3b8b719896e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-03d87b3b8b719896e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 62,
            "cidr_block": "10.2.199.128/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d87b3b8b719896e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0588932bc3d922c87",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0588932bc3d922c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "198.18.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0588932bc3d922c87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06811b6a53a3a7aa1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06811b6a53a3a7aa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 71,
            "cidr_block": "198.18.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06811b6a53a3a7aa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-068ce96600a5478c9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-068ce96600a5478c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 46,
            "cidr_block": "10.2.129.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068ce96600a5478c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-1-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06adf036a2a1577ba",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06adf036a2a1577ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4,
            "cidr_block": "10.2.128.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06adf036a2a1577ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1d",
              "SubnetType": "Private",
              "kubernetes.io/cluster/clee.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-fsadykov.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06b95c503090097af",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06b95c503090097af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 246,
            "cidr_block": "100.100.26.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b95c503090097af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kops-poc-2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-07ed9a12235a7c8cb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-07ed9a12235a7c8cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 39,
            "cidr_block": "100.100.31.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed9a12235a7c8cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-3-1c",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0958abfc5699dbb6c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0958abfc5699dbb6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 173,
            "cidr_block": "10.2.198.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958abfc5699dbb6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0b1650bfb13c62581",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0b1650bfb13c62581",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 71,
            "cidr_block": "198.18.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1650bfb13c62581",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0c7526f82ead196b6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0c7526f82ead196b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 74,
            "cidr_block": "10.2.199.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7526f82ead196b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0c7d811502b44812b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0c7d811502b44812b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 258,
            "cidr_block": "100.100.24.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7d811502b44812b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0d2305939b2c6c572",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0d2305939b2c6c572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 45,
            "cidr_block": "10.2.129.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2305939b2c6c572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-1-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0d3bf7ed0ddae1b76",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0d3bf7ed0ddae1b76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 9,
            "cidr_block": "198.18.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3bf7ed0ddae1b76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e075ad5024d4635b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e075ad5024d4635b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 26,
            "cidr_block": "10.2.129.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e075ad5024d4635b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-2-1d",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-consultest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-wynn-anna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcon.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e2568f718fefe8b7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e2568f718fefe8b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 231,
            "cidr_block": "100.100.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2568f718fefe8b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-5-1a",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e9de16f2225a7e0e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e9de16f2225a7e0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 47,
            "cidr_block": "10.2.129.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9de16f2225a7e0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-1-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0f8183eab4b5ca358",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0f8183eab4b5ca358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 2,
            "cidr_block": "10.2.132.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8183eab4b5ca358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Created-by": "Sanjeev Nithyanandam",
              "Name": "us-vet-ecp-dev-private-2-1c",
              "SubnetType": "Private",
              "UseCase": "Test EKS",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0f8d2bfd4be027b4b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0f8d2bfd4be027b4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "198.18.4.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8d2bfd4be027b4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "all_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00ec3c426f3dc09fe",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-00ec3c426f3dc09fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 20,
            "cidr_block": "10.2.128.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec3c426f3dc09fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/clee.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-danb.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-fsadykov.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-wynn-anna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-01b478f6e74b8612f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-01b478f6e74b8612f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 273,
            "cidr_block": "100.100.28.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b478f6e74b8612f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cluster-anna1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-02740ed9a86a6450d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-02740ed9a86a6450d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 0,
            "cidr_block": "10.2.128.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02740ed9a86a6450d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-03be8fb837ab2b49f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-03be8fb837ab2b49f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 0,
            "cidr_block": "10.2.128.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03be8fb837ab2b49f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-danb.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-03d87b3b8b719896e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-03d87b3b8b719896e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 62,
            "cidr_block": "10.2.199.128/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d87b3b8b719896e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06adf036a2a1577ba",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06adf036a2a1577ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4,
            "cidr_block": "10.2.128.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06adf036a2a1577ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1d",
              "SubnetType": "Private",
              "kubernetes.io/cluster/clee.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-fsadykov.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06b95c503090097af",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06b95c503090097af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 246,
            "cidr_block": "100.100.26.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b95c503090097af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kops-poc-2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0958abfc5699dbb6c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0958abfc5699dbb6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 173,
            "cidr_block": "10.2.198.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958abfc5699dbb6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0c7526f82ead196b6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0c7526f82ead196b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 74,
            "cidr_block": "10.2.199.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7526f82ead196b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0c7d811502b44812b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0c7d811502b44812b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 258,
            "cidr_block": "100.100.24.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7d811502b44812b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e075ad5024d4635b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e075ad5024d4635b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 26,
            "cidr_block": "10.2.129.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e075ad5024d4635b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-2-1d",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-consultest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-wynn-anna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcon.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e2568f718fefe8b7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e2568f718fefe8b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 231,
            "cidr_block": "100.100.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2568f718fefe8b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-5-1a",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0f8183eab4b5ca358",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0f8183eab4b5ca358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 2,
            "cidr_block": "10.2.132.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8183eab4b5ca358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Created-by": "Sanjeev Nithyanandam",
              "Name": "us-vet-ecp-dev-private-2-1c",
              "SubnetType": "Private",
              "UseCase": "Test EKS",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "all_private_by_filter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-00ec3c426f3dc09fe",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-00ec3c426f3dc09fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 20,
            "cidr_block": "10.2.128.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec3c426f3dc09fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/clee.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-danb.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-fsadykov.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-wynn-anna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-01b478f6e74b8612f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-01b478f6e74b8612f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 273,
            "cidr_block": "100.100.28.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b478f6e74b8612f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cluster-anna1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-02740ed9a86a6450d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-02740ed9a86a6450d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 0,
            "cidr_block": "10.2.128.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02740ed9a86a6450d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-03be8fb837ab2b49f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-03be8fb837ab2b49f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 0,
            "cidr_block": "10.2.128.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03be8fb837ab2b49f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-tempt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-danb.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-03d87b3b8b719896e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-03d87b3b8b719896e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 62,
            "cidr_block": "10.2.199.128/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d87b3b8b719896e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06adf036a2a1577ba",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06adf036a2a1577ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4,
            "cidr_block": "10.2.128.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06adf036a2a1577ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-1-1d",
              "SubnetType": "Private",
              "kubernetes.io/cluster/clee.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-abodo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-andrew.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-fsadykov.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kt.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test-subnet.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06b95c503090097af",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06b95c503090097af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 246,
            "cidr_block": "100.100.26.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b95c503090097af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kops-poc-2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0958abfc5699dbb6c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0958abfc5699dbb6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 173,
            "cidr_block": "10.2.198.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958abfc5699dbb6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0c7526f82ead196b6",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0c7526f82ead196b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 74,
            "cidr_block": "10.2.199.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7526f82ead196b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-3-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/ashdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capamar.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capk8stest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappun.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappuneabhay.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappunesample.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-captest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-ind.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-india.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolsupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-toolupgrade.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcaptest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devguy.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devindia.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot-hemraj.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotaruna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotchandan.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotkalpit.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotmamtha.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspottest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotvineel.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devspotyuga.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devsspotfarrukh.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devtest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/rajeshdevspot.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-pabitra.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-suparaja.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0c7d811502b44812b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0c7d811502b44812b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 258,
            "cidr_block": "100.100.24.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7d811502b44812b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e075ad5024d4635b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e075ad5024d4635b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 26,
            "cidr_block": "10.2.129.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e075ad5024d4635b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-2-1d",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-consultest.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vetus3.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-wynn-anna.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcon.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e2568f718fefe8b7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e2568f718fefe8b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 231,
            "cidr_block": "100.100.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2568f718fefe8b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-5-1a",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0f8183eab4b5ca358",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0f8183eab4b5ca358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 2,
            "cidr_block": "10.2.132.0/28",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8183eab4b5ca358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Created-by": "Sanjeev Nithyanandam",
              "Name": "us-vet-ecp-dev-private-2-1c",
              "SubnetType": "Private",
              "UseCase": "Test EKS",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-01b478f6e74b8612f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-01b478f6e74b8612f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 273,
            "cidr_block": "100.100.28.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b478f6e74b8612f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cluster-anna1.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-06b95c503090097af",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-06b95c503090097af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 246,
            "cidr_block": "100.100.26.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b95c503090097af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-kops-poc-2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0c7d811502b44812b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0c7d811502b44812b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 258,
            "cidr_block": "100.100.24.0/23",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7d811502b44812b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-4-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/DEV-EKS-GITHUB-ACTION": "shared",
              "kubernetes.io/cluster/capgemini-demo.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-cappune.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-capuk-eks": "shared",
              "kubernetes.io/cluster/dev-capuk.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-eks.us-east-1.dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dev-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcap-test.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devthiru.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/dvc.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/test-vault.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/v2beta2.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/vault-dev-eks": "shared",
              "kubernetes.io/cluster/vault-ent-dev.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e2568f718fefe8b7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e2568f718fefe8b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 231,
            "cidr_block": "100.100.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2568f718fefe8b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-private-5-1a",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0174faa80dda897b4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0174faa80dda897b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 82,
            "cidr_block": "100.100.31.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0174faa80dda897b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-2-1a",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-02a62ff2b22d3be22",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-02a62ff2b22d3be22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 37,
            "cidr_block": "100.100.31.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a62ff2b22d3be22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-2-1b",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-068ce96600a5478c9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-068ce96600a5478c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 46,
            "cidr_block": "10.2.129.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068ce96600a5478c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-1-1a",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/cluster/devcapus.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-07ed9a12235a7c8cb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-07ed9a12235a7c8cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 39,
            "cidr_block": "100.100.31.192/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed9a12235a7c8cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-3-1c",
              "lambda": "yes"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0d2305939b2c6c572",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0d2305939b2c6c572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 45,
            "cidr_block": "10.2.129.64/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2305939b2c6c572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-1-1b",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        },
        {
          "index_key": "subnet-0e9de16f2225a7e0e",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:subnet/subnet-0e9de16f2225a7e0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 47,
            "cidr_block": "10.2.129.128/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9de16f2225a7e0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607546651489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "us-vet-ecp-dev-public-1-1c",
              "SubnetType": "Private",
              "kubernetes.io/cluster/dev-terraform.vet-dev.digitalecp.mcd.com": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1",
              "lambda": "no"
            },
            "vpc_id": "vpc-0c1d18e7f896a1fff"
          }
        }
      ]
    },
    {
      "module": "module.vpc_subnet_cidrs_blocks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_info",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607546651489:vpc/vpc-0c1d18e7f896a1fff",
            "cidr_block": "10.2.128.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ceecae26fd7fed2b",
                "cidr_block": "10.2.128.0/23",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0a5138fd26781ab8b",
                "cidr_block": "10.2.132.0/26",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-001a6afd08c47e660",
                "cidr_block": "10.2.198.0/23",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-09e33691e0664cb92",
                "cidr_block": "100.100.24.0/21",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-09f0ba6e3678a25db",
                "cidr_block": "198.18.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08764657225bb6f8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c1d18e7f896a1fff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05b8ce70b6f1bece2",
            "owner_id": "607546651489",
            "state": "available",
            "tags": {
              "ApplicationID": "APP0331451",
              "Environment": "US-EAST-VPC-DEV",
              "GBL": "195500762258",
              "Name": "us-vet-ecp-dev",
              "Owner": "vanguard-vet.nar@capgemini.com"
            }
          }
        }
      ]
    }
  ]
}